configured swagger-ui