@@ -1,5 +1,6 @@
 package org.keldoters.pinoyrecipesapi.configuration;
 
+import io.swagger.v3.oas.models.security.SecurityScheme;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.bind.annotation.RestController;
@@ -7,12 +8,16 @@ import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
 import springfox.documentation.service.ApiInfo;
 import springfox.documentation.service.ApiKey;
+import springfox.documentation.service.AuthorizationScope;
+import springfox.documentation.service.SecurityReference;
 import springfox.documentation.spi.DocumentationType;
+import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @EnableSwagger2
 @Configuration
@@ -25,7 +30,9 @@ public class SpringFoxConfig {
                 .paths(PathSelectors.any())
                 .build()
                 .apiInfo(apiDetails())
-                .securitySchemes(Arrays.asList(apiKey()));
+                .securitySchemes(List.of(apiKey()))
+                .securityContexts(List.of(securityContext()));
+
     }
 
     private ApiInfo apiDetails() {
@@ -42,6 +49,16 @@ public class SpringFoxConfig {
     }
 
     private ApiKey apiKey() {
-        return new ApiKey("jwtToken", "Authorization", "header");
+        return new ApiKey("jwtToken", "Authorization", SecurityScheme.In.HEADER.name());
+    }
+
+    private SecurityContext securityContext() {
+        return SecurityContext.builder().securityReferences(securityReference()).build();
+
+    }
+
+    private List<SecurityReference> securityReference() {
+        AuthorizationScope[] authorizationScopes = {new AuthorizationScope("Unlimited", "Full API Permission")};
+        return List.of(new SecurityReference("jwtToken", authorizationScopes));
     }
 }
